# rescribe

./: Cargo.toml
src/: audio.rs  db.rs  http.rs  main.rs  tcp.rs  tts.rs
ui/: index.html  rescribe.js
