[package]
name = "rsll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.2.5", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
reqwest = "0.12.4"
rodio = "0.18.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = { version = "0.8.2", features = ["server", "native-tls", "openssl"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
